<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        app:cardCornerRadius="@dimen/_16sdp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/warning"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_8sdp" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/delete_message"
                android:textSize="@dimen/_12ssp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_14ssp" />

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/ok"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>